test/corpus/statements.txt
================================================================================
Text
================================================================================

\p{Adsf! Adfds, sadfklje, asdflkj? aldkfja. }

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Subtree
================================================================================

\subtree[foo-0001]{
  \title{Hello}
  \p{World}
}

\subtree{
  \title{Hello}
  \p{World}
}


--------------------------------------------------------------------------------

(source_file
  (subtree
    (addr
      (text))
    (argument
      (text)
      (command
        (command_name)
        (argument
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (text)))))
  (subtree
    (argument
      (text)
      (command
        (command_name)
        (argument
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (text))))))

================================================================================
Method call
================================================================================

\asdf#foo

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name))
  (hash_ident))

================================================================================
Contributor
================================================================================

\contributor{me}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Meta
================================================================================

\meta{external}{https://github.com/kentookura}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))
    (argument
      (text))))

================================================================================
Tags
================================================================================

\tag{foo}
\tag{baz-bar}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)))
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Author
================================================================================

\author{Kento Okura}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Import
================================================================================

\import{asd-053X}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Export
================================================================================

\export{asd-053X}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Date
================================================================================

\date{2023-02-08T12:03:12Z}
\date{2023-02-08}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)))
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Title
================================================================================

\title{My Title}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Transclusion
================================================================================

\transclude{nvm-0002}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text))))

================================================================================
Ident
================================================================================

\p{\foo{asdf}}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (command
        (command_name)
        (argument
          (text))))))

================================================================================
Inline Math
================================================================================

\p{
    #{E}

}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)
      (inline_math
        (text)))))

================================================================================
Display Math
================================================================================

\p{
    ##{E}

}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)
      (display_math
        (text)))))

================================================================================
Math Text
================================================================================

\p{
    ##{E}
}
\p{
  ##{E} asdf #{asdf}
}

\p{
  ##{E}, texttexttext #{textext}, textext.
}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)
      (display_math
        (text))))
  (command
    (command_name)
    (argument
      (text)
      (display_math
        (text))
      (text)
      (inline_math
        (text))))
  (command
    (command_name)
    (argument
      (text)
      (display_math
        (text))
      (text)
      (inline_math
        (text))
      (text))))

================================================================================
Math Commands
================================================================================

\p{
  ##{\f\relax{x} = \int_{-\infty}^\infty
  \f\hat\xi\,e^{2 \pi i \xi x}
  \,d\xi}

}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)
      (display_math
        (text)
        (braces
          (text))
        (text)
        (braces
          (text))
        (text)
        (braces
          (text))
        (text)))))

================================================================================
Default
================================================================================

\put?\foo{bar}

--------------------------------------------------------------------------------

(source_file
  (default
    identifier: (identifier
      name: (command_name))
    argument: (argument
      (text))))

================================================================================
Namespace
================================================================================

\namespace\foo{\p{hi}}

--------------------------------------------------------------------------------

(source_file
  (namespace
    identifier: (identifier
      name: (command_name))
    body: (argument
      (command
        name: (command_name)
        argument: (argument
          (text))))))

================================================================================
Call
================================================================================

\call{\foo}{bar}

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    argument: (argument
      (command
        name: (command_name)))
    argument: (argument
      (text))))

================================================================================
Datalog
================================================================================

\datalog{?X -: {foo}}

--------------------------------------------------------------------------------

(source_file
  (datalog
    (opaque_argument
      (text)
      (braces
        (text)))))

================================================================================
Verbatim Block
================================================================================

\startverb
foo {bar}
\stopverb

--------------------------------------------------------------------------------

(source_file
  (verbatim_block
    (verbatim_block_body)))

================================================================================
Comment
================================================================================

% lorem ipsum

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Function Definition
================================================================================

\def\foo[x][y][z]{
\p{\x \y \z}
\transclude{foo-0001}
}

--------------------------------------------------------------------------------

(source_file
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (text)
      (text)
      (argument
        (command
          (command_name)
          (argument
            (command
              (command_name))
            (text)
            (command
              (command_name))
            (text)
            (command
              (command_name))))
        (command
          (command_name)
          (argument
            (text)))))))

================================================================================
Prim
================================================================================

\p{
  [asdf](foo-0001)
  \ul{
      \li{[[asdf/asdf.pdf]]}
      }
    [asdf](foo-0001)

  }

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)
      (markdown_link
        (link_label
          (text))
        (addr
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (text)
          (command
            (command_name)
            (argument
              (unlabeled_link
                (addr
                  (text)))))
          (text)))
      (text)
      (markdown_link
        (link_label
          (text))
        (addr
          (text)))
      (text))))

================================================================================
Markdown Link with Math in Label
================================================================================

\p{[displayed category of #{T}-Moore machines](thesis-djm-003I)}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (markdown_link
        (link_label
          (text)
          (inline_math
            (text))
          (text))
        (addr
          (text))))))

================================================================================
Scope
================================================================================


\scope{
  \put\transclude/title{featured talks}
}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)
      (put
        (identifier
          (command_name))
        (argument
          (text))))))

================================================================================
Query
================================================================================

\def\query/bibliography[x]{
 \open\query
 \isect{
  \union-fam-rel{\transclusion-coslice{\x}}{\edges}{\outgoing}{\rel/links}
 }{
  \taxon{reference}
 }
}

--------------------------------------------------------------------------------

(source_file
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (argument
        (text)
        (open
          (identifier
            (command_name)))
        (text)
        (command
          (command_name)
          (argument
            (text)
            (command
              (command_name)
              (argument
                (command
                  (command_name)
                  (argument
                    (command
                      (command_name)))))
              (argument
                (command
                  (command_name)))
              (argument
                (command
                  (command_name)))
              (argument
                (command
                  (command_name))))
            (text))
          (argument
            (text)
            (command
              (command_name)
              (argument
                (text)))
            (text)))))))

================================================================================
Objects
================================================================================

\def\my-object{
  \object[self]{
    [method1]{
      the implementation of this method
    }
    [method2]{
      the implementation of another method
      \self#method1
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (def
    (fun_spec
      (identifier
        (command_name))
      (argument
        (text)
        (object
          (text)
          (method_decl
            (text)
            (method_body
              (text)
              (text)))
          (method_decl
            (text)
            (method_body
              (text)
              (text)
              (command
                (command_name))
              (hash_ident)
              (text))))))))

================================================================================
Patch
================================================================================

\patch{\my-object}[self]{
  [method1]{
    \self/super#method1
    some further code
  }
}

--------------------------------------------------------------------------------

(source_file
  (patch
    (argument
      (command
        (command_name)))
    (patch_bindings
      (text))
    (method_decl
      (text)
      (method_body
        (text)
        (command
          (command_name))
        (hash_ident)
        (text)
        (text)))))

================================================================================
XML
================================================================================

\xmlns:mml{http://www.w3.org/1998/Math/MathML}
\def\math[body]{\<mml:math>{\body}}
\def\mrow[body]{\<mml:mrow>{\body}}
\def\mi[x]{\<mml:mi>{\x}}
\def\mo[o]{\<mml:mo>{\o}}
\def\mn[n]{\<mml:mn>{\n}}

--------------------------------------------------------------------------------

(source_file
  (decl_xmlns
    (text))
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (argument
        (xml_tag
          (argument
            (command
              (command_name)))))))
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (argument
        (xml_tag
          (argument
            (command
              (command_name)))))))
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (argument
        (xml_tag
          (argument
            (command
              (command_name)))))))
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (argument
        (xml_tag
          (argument
            (command
              (command_name)))))))
  (def
    (fun_spec
      (identifier
        (command_name))
      (text)
      (argument
        (xml_tag
          (argument
            (command
              (command_name))))))))

================================================================================
Full
================================================================================

\title{My Title}
\p{hello}
\transclude{nvm-0002}
\p{
    \ul{
        \li{asdf}
        \li{foobar}
      }
  [asdf](foo-0001) [[foo-0001]]
  \code{asdlfkjasfd}
}

\block{
  [asdf](foo-0001) [[foo-0001]]
  \code{asdlfkjasfd}
  }{foo}

\def\my-object{
  \object[self]{
    [method1]{
      the implementation of this method
    }
    [method2]{
      the implementation of another method
      \self#method1
    }
  }
}

\patch{\my-object}[self]{
  [method1]{
    \self/super#method1
    some further code
  }
}

\table{
  \row{[forester query ](gld-0008)}{[[https://git.sr.ht/~kentookura/ocaml-forester/tree/nvim-support]]}
  \row{[forester-lsp](gld-0003)}{[[https://git.sr.ht/~kentookura/ocaml-forester/tree/lsp]]}
  \row{[more/better output ](gld-0007)}{N.A.}
  \row{[richer interactivity ](gld-0006)}{N.A.}
  \row{[pandoc filter](gld-000C)}{N.A.}
}




\scope{
  \put\transclude/titly{featured talks}
  \query{
    \query/author{jonmsterling}
  }
}

--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (argument
      (text)))
  (command
    (command_name)
    (argument
      (text)))
  (command
    (command_name)
    (argument
      (text)))
  (command
    (command_name)
    (argument
      (text)
      (command
        (command_name)
        (argument
          (text)
          (command
            (command_name)
            (argument
              (text)))
          (text)
          (command
            (command_name)
            (argument
              (text)))
          (text)))
      (text)
      (markdown_link
        (link_label
          (text))
        (addr
          (text)))
      (text)
      (unlabeled_link
        (addr
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (text)))))
  (command
    (command_name)
    (argument
      (text)
      (markdown_link
        (link_label
          (text))
        (addr
          (text)))
      (text)
      (unlabeled_link
        (addr
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (text)))
      (text))
    (argument
      (text)))
  (def
    (fun_spec
      (identifier
        (command_name))
      (argument
        (text)
        (object
          (text)
          (method_decl
            (text)
            (method_body
              (text)
              (text)))
          (method_decl
            (text)
            (method_body
              (text)
              (text)
              (command
                (command_name))
              (hash_ident)
              (text)))))))
  (patch
    (argument
      (command
        (command_name)))
    (patch_bindings
      (text))
    (method_decl
      (text)
      (method_body
        (text)
        (command
          (command_name))
        (hash_ident)
        (text)
        (text))))
  (command
    (command_name)
    (argument
      (text)
      (command
        (command_name)
        (argument
          (markdown_link
            (link_label
              (text))
            (addr
              (text))))
        (argument
          (unlabeled_link
            (addr
              (text)))))
      (text)
      (command
        (command_name)
        (argument
          (markdown_link
            (link_label
              (text))
            (addr
              (text))))
        (argument
          (unlabeled_link
            (addr
              (text)))))
      (text)
      (command
        (command_name)
        (argument
          (markdown_link
            (link_label
              (text))
            (addr
              (text))))
        (argument
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (markdown_link
            (link_label
              (text))
            (addr
              (text))))
        (argument
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (markdown_link
            (link_label
              (text))
            (addr
              (text))))
        (argument
          (text)))))
  (command
    (command_name)
    (argument
      (text)
      (put
        (identifier
          (command_name))
        (argument
          (text)))
      (text)
      (command
        (command_name)
        (argument
          (text)
          (command
            (command_name)
            (argument
              (text)))
          (text))))))
